# DIANA

./: .gitignore  .gitmodules  CHANGELOG.md  DATA_INTEGRITY_REPORT.md  LICENSE  MUSET_RESOURCES.md  PROJECT_STRUCTURE.md  README.md  REPRODUCIBILITY.md  REVIEW_CHECKLIST.md  TODO.md  cleanup_for_retraining.sh  environment.yml  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: data_config.yaml  feature_analysis.yaml  full_training.yaml  model_multitask.yaml  multitask_example.yaml  paper_config.py  sample_config_ERR12206679.sh  test_data_config.yaml  train_config.yaml  training_config.yaml
data/: diana_samples.fof
data/adapters/: adapters.fasta  list_adapt_for_removal_paired.txt  list_adapt_for_removal_single.txt
data/test_data/: metadata.tsv
data/validation/: accessions.txt  ena_cache.json  oom_failed_tasks.txt  oom_samples.txt  oom_samples_256gb.txt  retry_256gb_tasks.txt  retry_all_missing.txt  retry_high_mem_tasks.txt  samples_to_remove.txt  validation_metadata_expanded.tsv  validation_metadata_expanded_all.tsv  validation_metadata_v25.09.0.tsv
docs/: CLI_TOOL.md  INFERENCE_INTEGRATION_PLAN.md  MIGRATION_GUIDE.md  MODERN_SAMPLE_COLLECTION.md  MULTITASK_PIPELINE.md  MULTITASK_TRAINING.md  QUICK_REFERENCE.md  REFACTORING_STATUS.md  REPRODUCIBILITY.md  TRAINING.md
logs/final_training/: diana_final_61066584.err  diana_final_61066584.out  diana_final_61298442.err  diana_final_61298442.out
logs/validation/: diana_oom256_65024993_1.err  diana_oom256_65024993_1.out  diana_oom256_65024993_2.err  diana_oom256_65024993_2.out  diana_oom256_65024993_3.err  diana_oom256_65024993_3.out  diana_oom256_65024993_4.err  diana_oom256_65024993_4.out  diana_oom256_65024993_5.err  diana_oom256_65024993_5.out  diana_oom_64146959_1.err  diana_oom_64146959_1.out  diana_oom_64146959_2.err  diana_oom_64146959_2.out  diana_oom_64146959_3.err  diana_oom_64146959_3.out  diana_oom_64685125_1.err  diana_oom_64685125_1.out  (+1226 more)
paper/: README.md  reproduce.sh
scripts/: 00_create_test_data.py  01_create_splits.py  02_plot_data_distribution.py  03_statistical_tests_splits.py  build_muset.sh  install_seqdd.sh  populate_bioproject.py  regenerate_matrix_with_frac.sbatch
tests/: README.md  __init__.py  conftest.py  test_checkpointing.py  test_config.py  test_data_loader.py  test_data_loading.py  test_error_handling.py  test_inference.py  test_integration.sh  test_models.py  test_preprocessing.py  test_smoke.py
(+413 files in other folders)
