[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diana"
version = "0.1.0"
description = "Ancient DNA sample classifier — multi-task neural network trained on the largest aDNA dataset"
authors = [{ name = "Camila Duitama", email = "camiladuitama@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tensorboard",
    "tqdm",
    "h5py",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]
optim = ["optuna>=3.0.0"]

[project.scripts]
diana-train   = "diana.cli.train:main"
diana-test    = "diana.cli.test:main"
diana-predict = "diana.cli.predict:main"
diana-project = "diana.cli.project:main"

[tool.setuptools.packages.find]
where = ["src"]
