[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diana"
version = "0.1.0"
description = "Ancient DNA sample classifier — multi-task neural network trained on the largest aDNA dataset"
authors = [{ name = "Camila Duitama", email = "camiladuitama@gmail.com" }]
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = ["ancient DNA", "metagenomics", "deep learning", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tensorboard",
    "tqdm",
    "h5py",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]
optim = ["optuna>=3.0.0"]

[project.scripts]
diana-predict = "diana.cli.predict:main"
diana-project = "diana.cli.project:main"

[project.urls]
Homepage = "https://github.com/CamilaDuitama/DIANA"
"Bug Tracker" = "https://github.com/CamilaDuitama/DIANA/issues"
"Hugging Face" = "https://huggingface.co/cduitamag/DIANA"

[tool.setuptools.packages.find]
where = ["src"]
